added quatity counter and add to cart button

--- a/menswear/HTML files/accessories.html
+++ b/menswear/HTML files/accessories.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accessories | BagItUp</title>
-    <link rel="stylesheet" href="accessories.css">
-    <script defer src="../products.js"></script>
+    <link rel="stylesheet" href="./CSS Files/accessories.css">
+
 </head>
 
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png"
+            <div class="logo"><a href="../../home.html"><img src="../../images/newlogo-removebg-preview (2).png"
                         alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search accessories...">
-                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
+                <button><img src="../../images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
+                <a href="../../addtocart.html"><span><img src="../../images/addtocart.png" class="cart-icon"
                             alt="Cart" /></span></a>
-                <a href="../login.html" class="sign-in-btn">Sign In</a>
+                <a href="../../login.html" class="sign-in-btn">Sign In</a>
             </div>
         </nav>
     </div>
@@ -42,6 +42,11 @@
                     <div class="product-price">₹899</div>
                     <p class="product-description">Premium leather belt with classic buckle. Essential for any
                         wardrobe.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -55,6 +60,11 @@
                     <h3 class="product-name">Sunglasses</h3>
                     <div class="product-price">₹1,299</div>
                     <p class="product-description">Stylish sunglasses with UV protection. Perfect for sunny days.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -69,6 +79,11 @@
                     <div class="product-price">₹1,499</div>
                     <p class="product-description">Genuine leather wallet with multiple card slots. Compact and
                         functional.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -83,6 +98,11 @@
                     <div class="product-price">₹2,999</div>
                     <p class="product-description">Classic analog watch with stainless steel strap. Timeless
                         elegance.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -96,6 +116,11 @@
                     <h3 class="product-name">Baseball Cap</h3>
                     <div class="product-price">₹699</div>
                     <p class="product-description">Casual baseball cap for everyday wear. Adjustable and comfortable.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -110,6 +135,11 @@
                     <div class="product-price">₹1,999</div>
                     <p class="product-description">Durable canvas backpack with multiple compartments. Perfect for
                         daily use.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -119,7 +149,9 @@
         </div>
     </div>
 
-    <a href="../home.html" class="back-home">← Back to Home</a>
+    <a href="../../home.html" class="back-home">← Back to Home</a>
+    <script src="../quantity.js"></script>
+    <script src="../cartbutton.js"></script>
 </body>
 
 </html>
