--- a/menswear/HTML files/mens-jeans.html
+++ b/menswear/HTML files/mens-jeans.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Jeans | BagItUp</title>
-    <link rel="stylesheet" href="mens-jeans.css">
-    <script defer src="../products.js"></script>
+    <link rel="stylesheet" href="./CSS Files/mens-jeans.css">
+
 </head>
 
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png"
+            <div class="logo"><a href="../../home.html"><img src="../../images/newlogo-removebg-preview (2).png"
                         alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search jeans...">
-                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
+                <button><img src="../../images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
+                <a href="../../addtocart.html"><span><img src="../../images/addtocart.png" class="cart-icon"
                             alt="Cart" /></span></a>
-                <a href="../login.html" class="sign-in-btn">Sign In</a>
+                <a href="../../login.html" class="sign-in-btn">Sign In</a>
             </div>
         </nav>
     </div>
@@ -42,6 +42,11 @@
                     <div class="product-price">₹1,799</div>
                     <p class="product-description">Modern slim fit jeans with stretch denim. Perfect for a contemporary
                         look.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -56,6 +61,11 @@
                     <div class="product-price">₹1,599</div>
                     <p class="product-description">Classic regular fit jeans for everyday comfort. Timeless style meets
                         functionality.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -70,6 +80,11 @@
                     <div class="product-price">₹1,899</div>
                     <p class="product-description">Trendy skinny fit jeans with premium stretch fabric. Modern style for
                         the fashion-forward.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -84,6 +99,11 @@
                     <div class="product-price">₹1,699</div>
                     <p class="product-description">Comfortable relaxed fit jeans. Perfect for casual weekends and
                         laid-back style.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -97,6 +117,11 @@
                     <h3 class="product-name">Bootcut Jeans</h3>
                     <div class="product-price">₹1,799</div>
                     <p class="product-description">Classic bootcut style jeans. Versatile design for any occasion.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -111,6 +136,11 @@
                     <div class="product-price">₹2,099</div>
                     <p class="product-description">Edgy distressed jeans with rugged appeal. Make a bold fashion
                         statement.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -120,7 +150,9 @@
         </div>
     </div>
 
-    <a href="../home.html" class="back-home">← Back to Home</a>
+    <a href="../../home.html" class="back-home">← Back to Home</a>
+    <script src="../quantity.js"></script>
+    <script src="../cartbutton.js"></script>
 </body>
 
 </html>
