--- a/contact-us.html
+++ b/contact-us.html
@@ -206,7 +206,7 @@
                     </div>
                 </div>
 
-                <div class="contact-form">
+                <form class="contact-form" onsubmit="alert('Your message has been sent!'); return false;">
                     <div class="form-group">
                         <label>Your Name</label>
                         <input type="text" placeholder="John Doe" required>
@@ -228,7 +228,7 @@
                     </div>
 
                     <button type="submit" class="submit-btn">Send Message</button>
-                </div>
+                </form>
             </div>
         </div>
 
