--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
     <div class="hero-container">
       <nav class="top-nav">
         <div class="nav-left">
-          <a href="menswear/mens-shirts.html" class="nav-link">SHIRTS</a>
-          <a href="menswear/mens-tshirts.html" class="nav-link">T-SHIRTS</a>
-          <a href="menswear/jackets.html" class="nav-link">JACKETS</a>
-          <a href="menswear/mens-jeans.html" class="nav-link">BOTTOMS</a>
+          <a href="./menswear/HTML files/mens-shirts.html" class="nav-link">SHIRTS</a>
+          <a href="./menswear/HTML files/mens-tshirts.html" class="nav-link">T-SHIRTS</a>
+          <a href="./menswear/HTML files/jackets.html" class="nav-link">JACKETS</a>
+          <a href="./menswear/HTML files/mens-jeans.html" class="nav-link">BOTTOMS</a>
         </div>
 
         <div class="brand-logo">
@@ -22,10 +22,10 @@
         </div>
 
         <div class="nav-right">
-          <a href="menswear/footwear.html" class="nav-link">FOOTWEAR</a>
-          <a href="menswear/accessories.html" class="nav-link">ACCESSORIES</a>
+          <a href="./menswear/HTML files/footwear.html" class="nav-link">FOOTWEAR</a>
+          <a href="./menswear/HTML files/accessories.html" class="nav-link">ACCESSORIES</a>
           <a href="login.html" class="sign-in-button">SIGN IN / UP</a>
-          <a href="addtocart.html" class="cart-button">
+          <a href="" class="cart-button">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
               <path
                 d="M16 16C14.89 16 14 16.89 14 18C14 19.11 14.89 20 16 20C17.11 20 18 19.11 18 18C18 16.89 17.11 16 16 16ZM0 0V2H2L5.6 9.59L4.25 12.04C4.09 12.32 4 12.65 4 13C4 14.11 4.89 15 6 15H18V13H6.42C6.28 13 6.17 12.89 6.17 12.75L6.2 12.63L7.1 11H14.55C15.3 11 15.96 10.59 16.3 9.97L19.88 3.48C19.96 3.34 20 3.17 20 3C20 2.45 19.55 2 19 2H4.21L3.27 0H0ZM6 16C4.89 16 4 16.89 4 18C4 19.11 4.89 20 6 20C7.11 20 8 19.11 8 18C8 16.89 7.11 16 6 16Z"
@@ -78,7 +78,7 @@
 
         <div class="video-section">
           <video class="video-player" autoplay loop muted playsinline>
-            <source src="images/capstonevideo.mp4" type="video/mp4">
+            <source src="images/capstonevideo.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
         </div>
@@ -89,7 +89,9 @@
       <div class="footer-content">
         <div class="footer-section">
           <h3 class="footer-title">BAGITUP</h3>
-          <p class="footer-description">Gear up every season, every wardrobe with sustainable fashion.</p>
+          <p class="footer-description">
+            Gear up every season, every wardrobe with sustainable fashion.
+          </p>
         </div>
 
         <div class="footer-section">
