--- a/menswear/HTML files/jackets.html
+++ b/menswear/HTML files/jackets.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Jackets | BagItUp</title>
-    <link rel="stylesheet" href="jackets.css">
-    <script defer src="../products.js"></script>
+    <link rel="stylesheet" href="./CSS Files/jackets.css">
+
 </head>
 
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png"
+            <div class="logo"><a href="../../home.html"><img src="../../images/newlogo-removebg-preview (2).png"
                         alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search jackets...">
-                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
+                <button><img src="../../images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
+                <a href="../../addtocart.html"><span><img src="../../images/addtocart.png" class="cart-icon"
                             alt="Cart" /></span></a>
-                <a href="../login.html" class="sign-in-btn">Sign In</a>
+                <a href="../../login.html" class="sign-in-btn">Sign In</a>
             </div>
         </nav>
     </div>
@@ -43,6 +43,11 @@
                     <div class="product-price">₹2,499</div>
                     <p class="product-description">Classic denim jacket with timeless style. Perfect for casual outings
                         and layering.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -57,6 +62,11 @@
                     <div class="product-price">₹2,999</div>
                     <p class="product-description">Stylish bomber jacket with modern fit. Ideal for casual and
                         semi-formal occasions.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -71,6 +81,11 @@
                     <div class="product-price">₹4,999</div>
                     <p class="product-description">Premium leather jacket with sleek design. A wardrobe essential for
                         the modern man.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -85,6 +100,11 @@
                     <div class="product-price">₹1,999</div>
                     <p class="product-description">Lightweight windbreaker for active lifestyles. Water-resistant and
                         breathable.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -99,6 +119,11 @@
                     <div class="product-price">₹3,499</div>
                     <p class="product-description">Warm parka jacket for cold weather. Features insulated lining and
                         hood.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -113,6 +138,11 @@
                     <div class="product-price">₹3,999</div>
                     <p class="product-description">Smart casual blazer for formal occasions. Tailored fit with premium
                         fabric.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -122,7 +152,9 @@
         </div>
     </div>
 
-    <a href="../home.html" class="back-home">← Back to Home</a>
+    <a href="../../home.html" class="back-home">← Back to Home</a>
+    <script src="../quantity.js"></script>
+    <script src="../cartbutton.js"></script>
 </body>
 
 </html>
