--- a/menswear/HTML files/mens-shirts.html
+++ b/menswear/HTML files/mens-shirts.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's Shirts | BagItUp</title>
-    <link rel="stylesheet" href="mens-shirts.css">
-    <script defer src="../products.js"></script>
+    <link rel="stylesheet" href="./CSS Files/mens-shirts.css">
+
 </head>
 
 <body>
     <div class="navbar-container">
         <nav class="navbar">
-            <div class="logo"><a href="../home.html"><img src="../images/newlogo-removebg-preview (2).png"
+            <div class="logo"><a href="../../home.html"><img src="../../images/newlogo-removebg-preview (2).png"
                         alt="Logo" /></a></div>
             <div class="search-bar">
                 <input type="text" id="search" placeholder="Search shirts...">
-                <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
+                <button><img src="../../images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
+                <a href="../../addtocart.html"><span><img src="../../images/addtocart.png" class="cart-icon"
                             alt="Cart" /></span></a>
-                <a href="../login.html" class="sign-in-btn">Sign In</a>
+                <a href="../../login.html" class="sign-in-btn">Sign In</a>
             </div>
         </nav>
     </div>
@@ -43,6 +43,11 @@
                     <div class="product-price">₹1,899</div>
                     <p class="product-description">Classic oxford shirt made from 100% organic cotton. Perfect for
                         business casual and weekend wear.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -57,6 +62,11 @@
                     <div class="product-price">₹2,199</div>
                     <p class="product-description">Breathable organic linen dress shirt with a modern fit. Ideal for
                         warm weather and formal occasions.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -71,6 +81,11 @@
                     <div class="product-price">₹1,699</div>
                     <p class="product-description">Soft bamboo fiber shirt with natural antibacterial properties. Great
                         for casual outings and travel.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -85,6 +100,11 @@
                     <div class="product-price">₹1,999</div>
                     <p class="product-description">Durable hemp-cotton blend work shirt. Gets softer with each wash and
                         perfect for everyday wear.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -99,6 +119,11 @@
                     <div class="product-price">₹2,399</div>
                     <p class="product-description">Premium Tencel Lyocell dress shirt with excellent drape and
                         moisture-wicking properties.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -113,6 +138,11 @@
                     <div class="product-price">₹1,799</div>
                     <p class="product-description">Cozy organic cotton flannel shirt perfect for cooler weather and
                         layering.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -125,6 +155,11 @@
                     <div class="product-price">₹2,099</div>
                     <p class="product-description">Sustainable denim shirt made from recycled cotton. Classic style with
                         modern eco-conscious materials.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -137,6 +172,11 @@
                     <div class="product-price">₹1,599</div>
                     <p class="product-description">Light and versatile organic chambray shirt. Perfect for smart-casual
                         occasions and layering.</p>
+                    <div class="quantity-control">
+                        <button class="quantity-decrease">−</button>
+                        <span class="quantity-display">1</span>
+                        <button class="quantity-increase">+</button>
+                    </div>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -145,8 +185,10 @@
             </div>
         </div>
 
-        <a href="../home.html" class="back-home">← Back to Home</a>
+        <a href="../../home.html" class="back-home">← Back to Home</a>
     </div>
+    <script src="../quantity.js"></script>
+    <script src="../cartbutton.js"></script>
 </body>
 
 </html>
