made site responsive

--- a/menswear/HTML files/accessories.html
+++ b/menswear/HTML files/accessories.html
@@ -150,8 +150,8 @@
     </div>
 
     <a href="../../home.html" class="back-home">← Back to Home</a>
-    <script src="../quantity.js"></script>
-    <script src="../cartbutton.js"></script>
+    <script src="../JS files/quantity.js"></script>
+    <script src="../JS files/cartbutton.js"></script>
 </body>
 
 </html>
