--- a/menswear/HTML files/mens-shirts.html
+++ b/menswear/HTML files/mens-shirts.html
@@ -187,8 +187,7 @@
 
         <a href="../../home.html" class="back-home">← Back to Home</a>
     </div>
-    <script src="../quantity.js"></script>
-    <script src="../cartbutton.js"></script>
-</body>
+     <script src="../JS files/quantity.js"></script>
+    <script src="../JS files/cartbutton.js"></script>
 
 </html>
