added product images

--- a/menswear/HTML files/footwear.html
+++ b/menswear/HTML files/footwear.html
@@ -36,7 +36,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/footwear1.png" alt="Sneakers">
+                        <img src="../../images/classicsneaker.png" alt="Sneakers">
                     </div>
                     <h3 class="product-name">Classic Sneakers</h3>
                     <div class="product-price">₹2,499</div>
@@ -55,7 +55,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/footwear2.png" alt="Formal Shoes">
+                        <img src="../../images/formal.png" alt="Formal Shoes">
                     </div>
                     <h3 class="product-name">Formal Shoes</h3>
                     <div class="product-price">₹2,999</div>
@@ -74,7 +74,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/footwear3.png" alt="Loafers">
+                        <img src="../../images/loafers.png" alt="Loafers">
                     </div>
                     <h3 class="product-name">Loafers</h3>
                     <div class="product-price">₹2,299</div>
@@ -92,7 +92,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/footwear4.png" alt="Boots">
+                        <img src="../../images/leatherboots.png" alt="Boots">
                     </div>
                     <h3 class="product-name">Leather Boots</h3>
                     <div class="product-price">₹3,499</div>
@@ -110,7 +110,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/footwear5.png" alt="Running Shoes">
+                        <img src="../../images/runningshoes.png" alt="Running Shoes">
                     </div>
                     <h3 class="product-name">Running Shoes</h3>
                     <div class="product-price">₹2,799</div>
@@ -128,7 +128,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/footwear6.png" alt="Sandals">
+                        <img src="../../images/sandals.png" alt="Sandals">
                     </div>
                     <h3 class="product-name">Casual Sandals</h3>
                     <div class="product-price">₹1,299</div>
