--- a/menswear/HTML files/jackets.html
+++ b/menswear/HTML files/jackets.html
@@ -37,7 +37,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jacket1.png" alt="Denim Jacket">
+                        <img src="../../images/denim.webp" alt="Denim Jacket">
                     </div>
                     <h3 class="product-name">Denim Jacket</h3>
                     <div class="product-price">₹2,499</div>
@@ -56,7 +56,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jacket2.png" alt="Bomber Jacket">
+                        <img src="../../images/bomber.png" alt="Bomber Jacket">
                     </div>
                     <h3 class="product-name">Bomber Jacket</h3>
                     <div class="product-price">₹2,999</div>
@@ -75,7 +75,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jacket3.png" alt="Leather Jacket">
+                        <img src="../../images/leather.png" alt="Leather Jacket">
                     </div>
                     <h3 class="product-name">Leather Jacket</h3>
                     <div class="product-price">₹4,999</div>
@@ -94,7 +94,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jacket4.png" alt="Windbreaker">
+                        <img src="../../images/rename.png" alt="Windbreaker">
                     </div>
                     <h3 class="product-name">Windbreaker</h3>
                     <div class="product-price">₹1,999</div>
@@ -113,7 +113,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jacket5.png" alt="Parka Jacket">
+                        <img src="../../images/parka.png" alt="Parka Jacket">
                     </div>
                     <h3 class="product-name">Parka Jacket</h3>
                     <div class="product-price">₹3,499</div>
@@ -132,7 +132,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jacket6.png" alt="Blazer">
+                        <img src="../../images/blazer.png" alt="Blazer">
                     </div>
                     <h3 class="product-name">Blazer</h3>
                     <div class="product-price">₹3,999</div>
