--- a/menswear/HTML files/mens-jeans.html
+++ b/menswear/HTML files/mens-jeans.html
@@ -36,7 +36,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jeans1.png" alt="Slim Fit Jeans">
+                        <img src="../../images/slimfit.png" alt="Slim Fit Jeans">
                     </div>
                     <h3 class="product-name">Slim Fit Jeans</h3>
                     <div class="product-price">₹1,799</div>
@@ -55,7 +55,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jeans2.png" alt="Regular Fit Jeans">
+                        <img src="../../images/regular fit.png" alt="Regular Fit Jeans">
                     </div>
                     <h3 class="product-name">Regular Fit Jeans</h3>
                     <div class="product-price">₹1,599</div>
@@ -74,7 +74,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jeans3.png" alt="Skinny Jeans">
+                        <img src="../../images/skinny.png" alt="Skinny Jeans">
                     </div>
                     <h3 class="product-name">Skinny Jeans</h3>
                     <div class="product-price">₹1,899</div>
@@ -93,7 +93,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jeans4.png" alt="Relaxed Fit Jeans">
+                        <img src="../../images/relaxed.png" alt="Relaxed Fit Jeans">
                     </div>
                     <h3 class="product-name">Relaxed Fit Jeans</h3>
                     <div class="product-price">₹1,699</div>
@@ -112,7 +112,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jeans5.png" alt="Bootcut Jeans">
+                        <img src="../../images/bootcut.png" alt="Bootcut Jeans">
                     </div>
                     <h3 class="product-name">Bootcut Jeans</h3>
                     <div class="product-price">₹1,799</div>
@@ -130,7 +130,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/jeans6.png" alt="Distressed Jeans">
+                        <img src="../../images/distressed.png" alt="Distressed Jeans">
                     </div>
                     <h3 class="product-name">Distressed Jeans</h3>
                     <div class="product-price">₹2,099</div>
