--- a/menswear/HTML files/mens-shirts.html
+++ b/menswear/HTML files/mens-shirts.html
@@ -37,7 +37,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/shirt1.png" alt="Oxford Cotton Shirt">
+                        <img src="../../images/buttondown.png" alt="Oxford Button-Down Shirt">
                     </div>
                     <h3 class="product-name">Oxford Button-Down</h3>
                     <div class="product-price">₹1,899</div>
@@ -56,7 +56,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/shirt2.png" alt="Linen Dress Shirt">
+                        <img src="../../images/linenshirt.png" alt="Linen Dress Shirt">
                     </div>
                     <h3 class="product-name">Linen Dress Shirt</h3>
                     <div class="product-price">₹2,199</div>
@@ -75,7 +75,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/shirt3.png" alt="Casual Shirt">
+                        <img src="../../images/casualshirt.png" alt="Casual Shirt">
                     </div>
                     <h3 class="product-name">Casual Shirt</h3>
                     <div class="product-price">₹1,699</div>
@@ -94,7 +94,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/shirt4.png" alt="Hemp Blend Shirt">
+                        <img src="../../images/hemp.png" alt="Hemp-Cotton Work Shirt">
                     </div>
                     <h3 class="product-name">Hemp-Cotton Work Shirt</h3>
                     <div class="product-price">₹1,999</div>
@@ -113,7 +113,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/shirt5.png" alt="Tencel Dress Shirt">
+                        <img src="../../images/tencel.png" alt="Tencel Formal Shirt">
                     </div>
                     <h3 class="product-name">Tencel Formal Shirt</h3>
                     <div class="product-price">₹2,399</div>
@@ -132,7 +132,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/shirt6.png" alt="Flannel Shirt">
+                        <img src="../../images/cottonflanel.png" alt="Cotton Flannel Shirt">
                     </div>
                     <h3 class="product-name">Cotton Flannel</h3>
                     <div class="product-price">₹1,799</div>
@@ -150,7 +150,9 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image">Denim Shirt</div>
+                    <div class="product-image">
+                        <img src="../../images/eco denim shirt.png" alt="Eco-Denim Shirt">
+                    </div>
                     <h3 class="product-name">Eco-Denim Shirt</h3>
                     <div class="product-price">₹2,099</div>
                     <p class="product-description">Sustainable denim shirt made from recycled cotton. Classic style with
@@ -167,7 +169,9 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image">Chambray Shirt</div>
+                    <div class="product-image">
+                        <img src="../../images/organic chembray.png" alt="Organic Chambray Shirt">
+                    </div>
                     <h3 class="product-name">Organic Chambray Shirt</h3>
                     <div class="product-price">₹1,599</div>
                     <p class="product-description">Light and versatile organic chambray shirt. Perfect for smart-casual
