--- a/menswear/HTML files/mens-tshirts.html
+++ b/menswear/HTML files/mens-tshirts.html
@@ -37,7 +37,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/tshirt1.webp" alt="Classic Cotton Crew Neck T-Shirt">
+                        <img src="../../images/crew neck.png" alt="Classic Cotton Crew Neck T-Shirt">
                     </div>
                     <h3 class="product-name">Crew Neck</h3>
                     <div class="product-price">₹899</div>
@@ -56,7 +56,7 @@
 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../images/products/tshirt2.webp" alt="Modern V-Neck T-Shirt">
+                        <img src="../../images/vneck.png" alt="Modern V-Neck T-Shirt">
                     </div>
                     <h3 class="product-name">V-Neck</h3>
                     <div class="product-price">₹999</div>
@@ -75,7 +75,7 @@
 
                 <div class="product-card">
                     <div class="product-image product-image-polo">
-                        <img src="../images/products/tshirt3.png" alt="Classic Polo T-Shirt">
+                        <img src="../../images/polo.png" alt="Classic Polo T-Shirt">
                     </div>
                     <h3 class="product-name">Polo</h3>
                     <div class="product-price">₹1,299</div>
@@ -94,7 +94,7 @@
 
                 <div class="product-card">
                     <div class="product-image product-image-tshirt4">
-                        <img src="../images/products/tshirt 4.png" alt="Comfort Henley T-Shirt">
+                        <img src="../../images/henley.png" alt="Comfort Henley T-Shirt">
                     </div>
                     <h3 class="product-name">Henley</h3>
                     <div class="product-price">₹1,199</div>
@@ -112,7 +112,9 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image">Sport Raglan</div>
+                    <div class="product-image">
+                        <img src="../../images/reglan.png" alt="Sport Raglan T-Shirt">
+                    </div>
                     <h3 class="product-name">Raglan</h3>
                     <div class="product-price">₹1,099</div>
                     <p class="product-description">Athletic raglan sleeve design. Perfect for sports and casual wear
@@ -129,7 +131,9 @@
                 </div>
 
                 <div class="product-card">
-                    <div class="product-image">Street Oversized</div>
+                    <div class="product-image">
+                        <img src="../../images/oversized.png" alt="Street Oversized T-Shirt">
+                    </div>
                     <h3 class="product-name">Oversized</h3>
                     <div class="product-price">₹1,399</div>
                     <p class="product-description">Contemporary oversized fit with dropped shoulders. Perfect for a
